# src/main/java/com/booleanuk/api/controller/UserController.java
@@ -1,0 +1,37 @@
+package com.booleanuk.api.controller;
+
+import com.booleanuk.api.model.User;
+import com.booleanuk.api.repository.UserRepository;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("users")
+public class UserController {
+    private final UserRepository repository;
+
+    public UserController(UserRepository repository) {
+        this.repository = repository;
+    }
+
+    @GetMapping
+    public List<User> getAll() {
+        return this.repository.findAll();
+    }
+
+    @GetMapping("{id}")
+    public User getById(@PathVariable("id") Integer id) {
+        return this.repository.findById(id).orElseThrow();
+    }
+
+    record PostUser(String email, String firstName) {}
+
+    @ResponseStatus(HttpStatus.CREATED)
+    @PostMapping
+    public User create(@RequestBody PostUser request) {
+        User user = new User(request.email(), request.firstName());
+        return this.repository.save(user);
+    }
+}
